<resources>
    <string name="app_name">Restaurant Search App</string>
    <string name="station_name">駅名</string>
    <string name="restaurant_search">レストラン検索</string>
    <string name="store_name">店名</string>
    <string name="search">検索</string>
    <string name="search_around">周辺の飲食店を検索</string>
    <string name="add_filter">絞り込み条件追加</string>
    <string name="tabeho">食べ放題</string>
    <string name="nomiho">飲み放題</string>
    <string name="station">%1$s駅</string>
    <string name="mobile_coupon">携帯クーポン</string>
    <string name="search_result">検索結果</string>
    <string name="caution">Caution</string>
    <string name="caution_station_name">駅名を入力してください。</string>
    <string name="ok">OK</string>
    <!-- ジャンル選択用 -->
    <string-array name="spinner_items">
        <item>ジャンル選択</item>
        <item>居酒屋</item>
        <item>ダイニングバー・バル</item>
        <item>創作料理</item>
        <item>和食</item>
        <item>洋食</item>
        <item>イタリアン・フレンチ</item>
        <item>中華</item>
        <item>焼肉・ホルモン</item>
        <item>韓国料理</item>
        <item>アジア・エスニック料理</item>
        <item>各国料理</item>
        <item>カラオケ・パーティ</item>
        <item>バー・カクテル</item>
        <item>ラーメン</item>
        <item>お好み焼き・もんじゃ</item>
        <item>カフェ・スイーツ</item>
        <item>その他グルメ</item>
    </string-array>
</resources>